# general_dev

./: README.md  gh_push.sh  publish.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/general_dev/: pubspec.yaml
package/general_dev/example/: general_dev_example.dart
package/general_dev/lib/: general_dev.dart
package/general_dev/test/: general_dev_test.dart
package/general_dev_android/: pubspec.yaml
package/general_dev_android/lib/: general_dev_android.dart
package/general_dev_android/test/: general_dev_android_test.dart
package/general_dev_apis/: README.md  pubspec.yaml
package/general_dev_apis/example/: general_dev_apis_example.dart
package/general_dev_apis/lib/: general_dev_apis.dart
package/general_dev_apis/test/: general_dev_apis_test.dart
package/general_dev_cli/: README.md  pubspec.yaml
package/general_dev_cli/example/: general_dev_cli_example.dart
package/general_dev_cli/lib/: general_dev_cli.dart
package/general_dev_cli/test/: general_dev_cli_test.dart
package/general_dev_client/: pubspec.yaml
package/general_dev_client/example/: general_dev_client_example.dart
package/general_dev_client/lib/: general_dev_client.dart
package/general_dev_client/test/: general_dev_client_test.dart
package/general_dev_dart/: pubspec.yaml
package/general_dev_dart/example/: general_dev_dart_example.dart
package/general_dev_dart/lib/: general_dev_dart.dart
package/general_dev_dart/test/: general_dev_dart_test.dart
package/general_dev_flutter/: pubspec.yaml
package/general_dev_fucshia/: pubspec.yaml
package/general_dev_ios/: pubspec.yaml
package/general_dev_linux/: pubspec.yaml
package/general_dev_macos/: pubspec.yaml
package/general_dev_server/: pubspec.yaml
package/general_dev_web/: pubspec.yaml
package/general_dev_windows/: pubspec.yaml
test/: general_dev_test.dart
(+17 files in other folders)
